client/src/App.css
@import url('https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400,800&display=swap');
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root {
    --dark-color: #2d2c2c;
    --blue-solid: #243b67;
    --blue-transparent: rgba(36, 59, 103, 0.7);
    --blue-transparent-alt: rgba(36, 59, 103, 0.5);
    --blue-light: #0091a6;
    --aqua-solid: #00bd9d;
    --rating-color: #fcb900;
    --gradient-color: linear-gradient(
        to right,
        var(--aqua-solid),
        var(--blue-light)
    );
    --gradient-color-alt: linear-gradient(
        to right,
        var(--blue-light),
        var(--aqua-solid)
    );
}

html {
    font-size: 10px;
}

body {
    font-family: 'Open sans', sans-serif;
    font-size: 1.6rem;
    color: var(--dark-color);
}

main {
    display: block;
    min-height: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}

button {
    cursor: pointer;
}

ul {
    list-style: none;
}

section {
    padding: 5rem 0;
}

.container {
    width: 100%;
    max-width: 120rem;
    padding: 0 1.5rem;
    margin: 0 auto;
}

.btn-gradient {
    color: #fff;
    font-size: 1.3rem;
    font-weight: bold;
    text-transform: uppercase;
    padding: 0.5rem 3.5rem;
    border: none;
    border-radius: 10rem;
    display: inline-flex;
    align-items: center;
    background-image: var(--gradient-color);
    transition: all 500ms;
    overflow: hidden;
}

.btn-gradient:hover {
    background-image: var(--gradient-color-alt);
}

.btn-blue {
    color: #fff;
    font-size: 1.3rem;
    font-weight: bold;
    text-transform: uppercase;
    padding: 0.5rem 3.5rem;
    border: none;
    border-radius: 10rem;
    display: inline-flex;
    align-items: center;
    margin-top: 2.5rem;
    background-color: var(--blue-solid);
    transition: all 500ms;
}

.btn-blue:hover {
    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
    background-color: #006693;
}

.no-drop-btn {
    cursor: no-drop;
}
.no-drop-btn {
    cursor: no-drop;
    background-color: var(--blue-solid);
    font-size: 1.3rem;
    font-weight: bold;
    text-transform: uppercase;
    padding: 0.5rem 3.5rem;
    border: none;
    border-radius: 10rem;
    display: inline-flex;
    align-items: center;
    margin-top: 2.5rem;
    color: #fff;
}

.dots {
    font-size: 2.4rem;
    margin-left: 0.5rem;
    opacity: 0.75;
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    gap: 2.5rem;
}

.grid-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.section-container {
    min-height: calc(100vh - 125px);
}

::-webkit-scrollbar {
    width: 1.3rem;
}

::-webkit-scrollbar-track {
    background: rgba(36, 59, 103, 0.3);
}

::-webkit-scrollbar-thumb {
    border-radius: 1rem;
    background: #0079a5;
}

.error-input-field {
    border: 1px solid #ff525b !important;
    animation: shake 200ms ease-in-out 0ms 2;
}

@keyframes shake {
    0% {
        margin-left: 0rem;
    }
    25% {
        margin-left: 0.2rem;
    }
    75% {
        margin-left: -0.2rem;
    }
    100% {
        margin-left: 0rem;
    }
}

@media all and (min-width: 368px) {
    .grid {
        grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
    }
}
@media all and (min-width: 768px) {
    .grid {
        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
    }
}

